Wrote a bunch of decoders. Not everything, but that's plenty for now.

--- a/assets/index.html
+++ b/assets/index.html
@@ -25,7 +25,7 @@
         {tiledjson: ""}
       );
 
-      loadJSON('../assets/Tiled2.json', function(response) {
+      loadJSON('../assets/Tiled.json', function(response) {
         app.ports.tiledjson.send(JSON.parse(response));
       });
 
