--- a/assets/index.html
+++ b/assets/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='utf-8'>
+    <link rel="stylesheet" media="screen" href="example.css"/>
     <script src="Tiled.js" type="text/javascript"></script>
   </head>
   <body>
